--- a/config/rbac/instance_editor_role.yaml
+++ b/config/rbac/instance_editor_role.yaml
@@ -1,21 +1,12 @@
----
+# permissions for end users to edit instances.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: fizz-buzz-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: instance-editor-role
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
 - apiGroups:
   - fizz-buzz.hegerdes.com
   resources:
@@ -31,14 +22,6 @@ rules:
 - apiGroups:
   - fizz-buzz.hegerdes.com
   resources:
-  - instances/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - fizz-buzz.hegerdes.com
-  resources:
   - instances/status
   verbs:
   - get
-  - patch
-  - update
