--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ Dockerfile.cross
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
+dist
 *.out
 
 # Go workspace file
