--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: check-yaml
         args: [--allow-multiple-documents]
-        exclude: charts/k8s-admission/.*.yaml
+        exclude: charts/fizz-buzz-operator/templates/.*.yaml
       - id: check-json
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys, --no-ensure-ascii]
@@ -35,14 +35,14 @@ repos:
           # Make the tool search for charts only under the `charts` directory
           - --chart-search-root=charts
 
-  # - repo: https://github.com/losisin/helm-values-schema-json
-  #   rev: v1.6.4
-  #   hooks:
-  #     - id: helm-schema
-  #       args:
-  #         - "-indent"
-  #         - "2"
-  #         - "-input"
-  #         - "k8s-admission/charts/k8s-admission/values.yaml"
-  #         - "--output"
-  #         - "k8s-admission/charts/k8s-admission/values.schema.json"
+  - repo: https://github.com/losisin/helm-values-schema-json
+    rev: v1.6.4
+    hooks:
+      - id: helm-schema
+        args:
+          - "-indent"
+          - "2"
+          - "-input"
+          - "charts/fizz-buzz-operator/values.yaml"
+          - "--output"
+          - "charts/fizz-buzz-operator/values.schema.json"
