--- a/charts/install.yaml
+++ b/charts/install.yaml
@@ -3,7 +3,6 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.1
-  creationTimestamp: null
   name: instances.fizz-buzz.hegerdes.com
 spec:
   group: fizz-buzz.hegerdes.com
@@ -135,14 +134,18 @@ status:
   storedVersions: null
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: fizz-buzz
+---
+apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
-    app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/name: fizz-buzz-operator
     control-plane: controller-manager
   name: fizz-buzz-operator-controller-manager-metrics-service
+  namespace: fizz-buzz
 spec:
   ports:
     - name: https
@@ -157,9 +160,7 @@ status:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
   labels:
-    app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/name: fizz-buzz-operator
   name: fizz-buzz-operator-instance-editor-role
 rules:
@@ -181,16 +182,6 @@ rules:
       - instances/status
     verbs:
       - get
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  creationTimestamp: null
-  labels:
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/name: fizz-buzz-operator
-  name: fizz-buzz-operator-instance-viewer-role
-rules:
   - apiGroups:
       - fizz-buzz.hegerdes.com
     resources:
@@ -205,14 +196,78 @@ rules:
       - instances/status
     verbs:
       - get
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - "*"
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: ClusterRoleBinding
 metadata:
-  creationTimestamp: null
-  name: fizz-buzz-operator-metrics-reader
-rules:
-  - nonResourceURLs:
-      - /metrics
-    verbs:
-      - get
+  name: fizz-buzz-operator-instance-editor-role
+subjects:
+  - kind: ServiceAccount
+    name: fizz-buzz-operator
+    namespace: fizz-buzz
+roleRef:
+  kind: ClusterRole
+  name: fizz-buzz-operator-instance-editor-role
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: fizz-buzz-operator
+  namespace: fizz-buzz
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: fizz-buzz-operator
+  namespace: fizz-buzz
+  labels:
+    app.kubernetes.io/name: fizz-buzz-operator
+    app.kubernetes.io/instance: fizz-buzz-operator
+    app.kubernetes.io/version: "0.1.0"
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: fizz-buzz-operator
+      app.kubernetes.io/instance: fizz-buzz-operator
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: fizz-buzz-operator
+        app.kubernetes.io/instance: fizz-buzz-operator
+    spec:
+      serviceAccountName: fizz-buzz-operator
+      containers:
+        - name: fizz-buzz-operator
+          image: hegerdes/fizz-buzz-operator
+          imagePullPolicy: IfNotPresent
+          resources:
+            limits:
+              cpu: 500m
+              memory: 265Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
+          ports:
+            - name: metrics
+              containerPort: 8080
+              protocol: TCP
+            - name: status
+              containerPort: 8081
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: status
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: status
