fix: helm docs plugin install
Signed-off-by: Henrik Gerdes <hegerdes@outlook.de>

--- a/charts/fizz-buzz-operator/Chart.yaml
+++ b/charts/fizz-buzz-operator/Chart.yaml
@@ -5,5 +5,5 @@ name: fizz-buzz-operator
 type: application
 version: 0.1.0
 maintainers:
-  - name: Henrik Gerdes
+  - name: hegerdes
     email: hegerdes@outlook.de
