--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,13 +47,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "^1.23"
+
       - name: Install helm
         uses: azure/setup-helm@v4
 
-      - name: Install helm plugings
+      - name: Install helm plugins
         run: |
           helm plugin install https://github.com/losisin/helm-values-schema-json.git
-          brew install norwoodj/tap/helm-docs
+          go install github.com/norwoodj/helm-docs/cmd/helm-docs@latest
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
