--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  HELM_DOCS_VERSION: 1.14.2
+  GO_VERSION: ^1.23
+
 jobs:
   go-test:
     runs-on: ubuntu-latest
@@ -16,7 +20,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "^1.23"
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Run Build
         run: make
@@ -50,7 +54,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "^1.23"
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Install helm
         uses: azure/setup-helm@v4
@@ -58,7 +62,8 @@ jobs:
       - name: Install helm plugins
         run: |
           helm plugin install https://github.com/losisin/helm-values-schema-json.git
-          go install github.com/norwoodj/helm-docs/cmd/helm-docs@latest
+          curl -sSL -O helm-docs.tar.gz https://github.com/norwoodj/helm-docs/releases/download/v${{ env.HELM_DOCS_VERSION }}/helm-docs_${{ env.HELM_DOCS_VERSION }}_Linux_x86_64.tar.gz
+          tar -xzvf helm-docs.tar.gz -C /usr/local/bin
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
