--- a/charts/fizz-buzz-operator/templates/tests/test-connection.yaml
+++ b/charts/fizz-buzz-operator/templates/tests/test-connection.yaml
@@ -8,8 +8,8 @@ metadata:
     "helm.sh/hook": test
 spec:
   containers:
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args: ['{{ include "fizz-buzz-operator.fullname" . }}:{{ .Values.service.port }}']
+    - name: curl
+      image: alpine/curl
+      command: ['curl']
+      args: ['{{ include "fizz-buzz-operator.fullname" . }}:{{ .Values.service.port }}/metrics']
   restartPolicy: Never
