--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,6 @@ jobs:
     secrets:
       REGISTRY_USER: ${{ secrets.DOCKERHUB_USERNAME }}
       REGISTRY_PW: ${{ secrets.DOCKERHUB_TOKEN }}
-      COSIGN_KEY_OR_KMS: ${{ secrets.COSIGN_KEY_STORE }}
 
   gh-release:
     runs-on: ubuntu-latest
@@ -60,3 +59,5 @@ jobs:
         with:
           version: latest
           args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
