--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
     uses: hegerdes/helper-suite/.github/workflows/reusable-docker-build.yml@main
     with:
       build-name: ${{ github.repository_owner }}/fizz-buzz-operator,ghcr.io/${{ github.repository_owner }}/fizz-buzz-operator
-      build-tags: ${{ github.ref_name }},latest
+      build-tags: |
+        ${{ github.ref_name }}
+        latest
       sign-with-github: true
       build-args: |
         COMMIT_HASH=${{ github.sha }}
