--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   HELM_DOCS_VERSION: 1.14.2
-  GO_VERSION: ^1.23
+  GO_VERSION: ^1.24
 
 jobs:
   go-test:
@@ -58,6 +58,8 @@ jobs:
 
       - name: Install helm
         uses: azure/setup-helm@v4
+        with:
+          version: v3.19.4
 
       - name: Install helm plugins
         run: |
